# natal

./: .gitignore  README.md  analyze3.py  analyze_both.py  analyze_d5.py  analyze_formula.py  analyze_vargas.py  bot.py  brute_force.py  build_d5.py  dataset 16.03.1989 Novosibirsk  main.py  natal.py  pyproject.toml  reverse_engineer.py  test_bphs.py  test_d5_fast.py  test_parse.py  test_vargas.py  varga_algorithms.py  varga_lookup.py
