[project]
name = "natal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopy>=2.5.0",
    "pyswisseph>=2.10.3.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "pytz>=2026.2",
    "timezonefinder>=8.2.0",
]
